# recommend

./: .flake8  .gitignore  .travis.yml  README.md  mypy.ini  pyproject.toml  simple_cf.py
recommend/: simple_cf.py
scripts/: lint
src/recommend/: data_loader.py  simple_cf.py
tests/: test_simple_cf.py
