[tool.poetry]
name = "recommend"
version = "0.1.0"
description = "utils for Recommender Systems"
authors = ["yu-ya4 <yuya4.matsumura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
