[tool.poetry]
name = "recommend"
version = "0.1.0"
description = "utils for Recommender Systems"
authors = ["yu-ya4 <yuya4.matsumura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
pandas = "^1.0.5"
sklearn = "^0.0"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^7.16.1"
pylint = "^2.5.3"
black = "^19.10b0"
mypy = "^0.782"
pytest = "^5.4.3"
flake8 = "^3.8.3"
pytest-html = "^2.1.1"
pytest-cov = "^2.10.0"
pytest-datadir = "^1.3.1"
pytest-dbfixtures = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
